Commit - Explaining some properties in the file application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#carga schema.sql y data.sql si existen en el dir resources/
 spring.sql.init.mode=always
+
+#Para mostrar las trazas de sql, es decir, las consultas
 logging.level.sql=debug
